# OpenTelemetryExample

./: README.md
cpp/: build_system.md  docker-compose.yml  otel-collector-config.yaml  otel_conanfile.py  test.sh
cpp/jaeger/: README.md  conan.md
cpp/services/api-gateway/: main.cpp
cpp/services/inventory-service/: CMakeLists.txt  Dockerfile
cpp/services/order-service/: main.cpp
cpp/services/payment-service/: main.cpp
cpp/tempo/: README.md  docker-compose.yml  traces-dashboard.json
cpp/tempo/scripts/: test_traces.sh
cpp/tempo/services/api-gateway/: CMakeLists.txt  Dockerfile  main.cpp
cpp/tempo/services/inventory-service/: CMakeLists.txt  Dockerfile  main.cpp
cpp/tempo/tempo/: tempo.yaml
dotnet/: docker-compose.yml  otel-collector-config.yaml  readme.md
dotnet/Custom.Client/ApachePulsar/: PulsarExtentions.cs
dotnet/DotnetTelemetryPlayground.ApiService/: Dockerfile  Program.cs  StartupExtentions.cs
dotnet/DotnetTelemetryPlayground.ApiServiceAtFront/: Dockerfile  Program.cs  StartupExtentions.cs
dotnet/aspire/: CURL_EXAMPLES.sh  docker-compose.yml  otel-collector-config.yaml  readme.md
dotnet/jaeger/: docker-compose.yml  dotnet-telemetry-playground.slnx
dotnet/tempo/: DOCKER_SETUP.md  docker-compose.yml  mongo-init.js  mongo-init.sh  otel-collector-config.yaml  readme.md
dotnet/tempo/tempo/: tempo.yaml
python/: README.md  test_traces.sh
python/database-service/: main.py
python/inventory-service/: main.py
python/jaeger/: docker-compose.yml  prompt.md
python/order-service/: main.py
python/tempo/: README.md  docker-compose.yml
(+120 files in other folders)
